<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.m2i.menudemo.MainActivity">


    <item
        android:id="@+id/action_ActiviteGrp"
        android:orderInCategory="100"
        android:title="@string/action_ActiviteGrp"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_ActivitePrincipale"
                android:orderInCategory="100"
                android:title="@string/action_ActivitePrincipale"
                app:showAsAction="never"
                android:icon="@drawable/menu_icon0"
                />
            <item
                android:id="@+id/action_Activite1"
                android:orderInCategory="100"
                android:title="@string/action_Activite1"
                app:showAsAction="never"
                android:icon="@drawable/menu_icon1"
                />
            <item
                android:id="@+id/action_Activite2"
                android:orderInCategory="100"
                android:title="@string/action_Activite2"
                app:showAsAction="never"
                android:icon="@drawable/menu_icon2"
                />
            <item
                android:id="@+id/action_Activite3"
                android:orderInCategory="100"
                android:title="@string/action_Activite3"
                app:showAsAction="never"
                android:icon="@drawable/menu_icon3"
                android:enabled="false"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_Connexion"
        android:orderInCategory="100"
        android:title="Connexion"
        app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/action_Parametre"
        android:orderInCategory="100"
        android:title="Paramètre"
        app:showAsAction="never"
        />
</menu>
